[package]
name = "actix-httpbin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.4.0", features = ["macros"] }
